--- a/strain-search/package.json
+++ b/strain-search/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
     "fibers": "^3.1.0",
+    "jquery": "^1.9.1",
+    "mongoose": "^5.9.18",
+    "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
+    "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
