--- a/strain-search/package.json
+++ b/strain-search/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "caniuse": "^0.1.3",
+    "caniuse-lite": "^1.0.30001181",
     "express": "^4.17.1",
     "fibers": "^3.1.0",
     "jquery": "^3.5.0",
